--- a/shortstorystyle.css
+++ b/shortstorystyle.css
@@ -1,1 +1,6 @@
-html, body {font-family:Helvetica, Arial, sans-serif}
+html, body {
+background: #FFF;
+    color: #111;
+        font: 14px Baskerville, "Palatino Linotype", "Times New Roman", Times, serif;
+	    text-align: center;
+    }
