--- a/shortstorystyle.css
+++ b/shortstorystyle.css
@@ -1,6 +1,6 @@
 html, body {
-background: #FFF;
+background: i#fadb6f;
     color: #111;
         font: 14px Baskerville, "Palatino Linotype", "Times New Roman", Times, serif;
-	    text-align: center;
+	    text-align: left;
     }
