--- a/shortstorystyle.css
+++ b/shortstorystyle.css
@@ -1,5 +1,5 @@
 html, body {
-background: i#fadb6f;
+background: #fadb6f;
     color: #111;
         font: 14px Baskerville, "Palatino Linotype", "Times New Roman", Times, serif;
 	    text-align: left;
