--- a/shortstorystyle.css
+++ b/shortstorystyle.css
@@ -5,7 +5,7 @@ background: #fadb6f;
 	    text-align: left;
 		     margin-top: 10px;
 		       margin-bottom: 100px;
-		         margin-right: 100px;
+		         margin-right: 10%;
 			   margin-left: 100px;
 		   
     }
